--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
-<h1 class="mt-5">{{title}}</h1>
-<hr>
+<!-- <h1 class="mt-5">{{title}}</h1>
+<hr> -->
 <!-- <p>Bienvenidos</p>
 <p>Counter: {{counter}}</p>
 <button (click)="increaseCounterBy(10)">+10</button>
@@ -7,7 +7,8 @@
 <button (click)="reset()">Reset</button> -->
 
 <!-- Se puede tener tantos componentes como se desee -->
-<app-counter></app-counter>
+<!-- <app-counter></app-counter>
 <app-counter></app-counter>
 <app-heroes-hero></app-heroes-hero>
-<app-heroes-list></app-heroes-list>
+<app-heroes-list></app-heroes-list> -->
+<app-dbz-main-page></app-dbz-main-page>
